--- a/app.json
+++ b/app.json
@@ -1,8 +1,5 @@
 {
-  "name": "Spring Boot Heroku Demo",
-  "description": "This is a small demo application for showing how to run a Spring Boot application on Heroku.",
-  "website": "https://blog.codecentric.de/en/2015/10/deploying-spring-boot-applications-to-heroku",
-  "repository": "https://github.com/britter/spring-boot-heroku-demo",
-  "image": "heroku/java",
+  "name": "Start on Heroku: Java",
+  "description": "A barebones Java app, which can easily be deployed to Heroku.",
   "addons": [ "heroku-postgresql" ]
 }
