--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.datasource.url: ${JDBC_DATABASE_URL:}
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=10
+# Database Config
+# Un-comment these lines to connect to a database. When commented out, you automatically get an in-memory-database.
+#spring.jpa.hibernate.ddl-auto=update
 
-spring.thymeleaf.mode=HTML
-
-logging.level.org.springframework=INFO
-
-spring.profiles.active=production
-
-server.port=${PORT:5000}
+#spring.datasource.url=jdbc:postgresql://192.168.59.103:5432/spring-boot-heroku-example
+#spring.datasource.username=spring-boot-heroku-example
+#spring.datasource.password=spring-boot-heroku-example
+#spring.datasource.driver-class-name=org.postgresql.Driver
