--- a/pom.xml
+++ b/pom.xml
@@ -87,11 +87,11 @@
             <version>1.3</version>
         </dependency>
 
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.4</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>commons-io</groupId>-->
+            <!--<artifactId>commons-fileupload</artifactId>-->
+            <!--<version>1.4</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
