--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Copyright 2015 Benedikt Ritter
 
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.britter</groupId>
     <artifactId>spring-boot-heroku-demo</artifactId>
+    <packaging>jar</packaging>
     <version>0.2.6</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.1.RELEASE</version>
+        <version>1.4.3.RELEASE</version>
     </parent>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <git.commit.link>${project.scm.url}/commit/${buildNumber}</git.commit.link>
+    </properties>
+
+    <!--<scm>-->
+        <!--<url>https://github.com/britter/spring-boot-heroku-demo</url>-->
+        <!--<connection>scm:git:git://github.com/britter/spring-boot-heroku-demo.git</connection>-->
+        <!--<developerConnection>scm:git:ssh://git@github.com/britter/spring-boot-heroku-demo.git</developerConnection>-->
+        <!--<tag>HEAD</tag>-->
+    <!--</scm>-->
 
     <dependencies>
         <dependency>
@@ -100,20 +99,18 @@
             <version>3.15</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
 
     </dependencies>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <git.commit.link>${project.scm.url}/commit/${buildNumber}</git.commit.link>
-    </properties>
 
-    <scm>
-        <url>https://github.com/britter/spring-boot-heroku-demo</url>
-        <connection>scm:git:git://github.com/britter/spring-boot-heroku-demo.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/britter/spring-boot-heroku-demo.git</developerConnection>
-        <tag>HEAD</tag>
-    </scm>
+
+
 
     <build>
         <finalName>app</finalName>
