--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-fio=org.postgresql.Driver
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/dop
-spring.datasource.username=postgres
-spring.datasource.password=Install_new!
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb2
+spring.datasource.username=monitor
+spring.datasource.password=monitor
 
 
 # MULTIPART (MultipartProperties)
