--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-fio=org.postgresql.Driver
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydb2
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb2?createDatabaseIfNotExist=true
 spring.datasource.username=monitor
 spring.datasource.password=monitor
 
@@ -26,3 +26,6 @@ spring.datasource.password=monitor
 #search multipart
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
+
+logging.level.=INFO
+logging.file=myapplication.log
