--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,20 @@
 #spring.datasource.driver-class-fio=org.postgresql.Driver
 
 
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.driver-class-fio=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.driver-class-fio=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/mydb2?createDatabaseIfNotExist=true
+#spring.datasource.username=monitor
+#spring.datasource.password=monitor
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydb2?createDatabaseIfNotExist=true
-spring.datasource.username=monitor
-spring.datasource.password=monitor
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 
 # MULTIPART (MultipartProperties)
