--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
             <version>1.1.1</version>
         </dependency>
 
+        <!-- H2 Database -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
     </dependencies>
 
 
